<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/baudrate"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/text_size"/>

    <Spinner
        android:id="@+id/sp_baudrate"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.6"/>

    <LinearLayout
        android:id="@+id/usb_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/data_bits"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/text_size"/>

        <Spinner
            android:id="@+id/sp_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/stop_bits"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/text_size"/>

        <Spinner
            android:id="@+id/sp_stop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvFlag"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/parity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/text_size"/>

    <Spinner
        android:id="@+id/sp_parity"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_open_or_close"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:onClick="controlledPort"
        android:text="@string/open_port"
        android:textSize="@dimen/text_size"/>
</LinearLayout>